--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "serve": "ng serve --poll=2000 -o",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -12,14 +13,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.9",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
     "@angular/forms": "~8.2.9",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@vapaee/dex": "^2.2.3",
+    "@vapaee/feedback": "^1.0.3",
+    "@vapaee/scatter": "^1.0.1",
+    "bignumber.js": "^8.0.2",
+    "eosjs": "^16.0.9",
+    "hammerjs": "^2.0.8",
+    "ngx-cookie-service": "^2.1.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.3",
+    "scatterjs-core": "^2.3.8",
+    "scatterjs-plugin-eosjs": "^1.3.10",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -28,9 +41,10 @@
     "@angular/cli": "~8.3.9",
     "@angular/compiler-cli": "~8.2.9",
     "@angular/language-service": "~8.2.9",
-    "@types/node": "~8.9.4",
+    "@babel/runtime": "^7.6.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
